# srtla

./: .gitignore  .gitmodules  CMakeLists.txt  srtla_rec.c  srtla_send
src/: common.c  common.h  main.cpp  main.h  receiver.cpp  receiver.h  sender.cpp  sender.h
